fix: Black background in qq browser in dark mode

--- a/src/style/adaptation/mobile.less
+++ b/src/style/adaptation/mobile.less
@@ -72,6 +72,7 @@
                 }
                 .mobile-input-container {
                     display: flex;
+                    background-color: #fff;
                 }
                 .graphing-container {
                     height: 49%;
