--- a/src/style/calculator/graphing.less
+++ b/src/style/calculator/graphing.less
@@ -15,7 +15,6 @@
             display: flex;
             padding: 7px 0;
             border-top: 1px solid var(--ca-gray2);
-            border-bottom: 1px solid var(--ca-gray2);
             background-color: var(--ca-light2);
             &-tag {
                 flex: .9;
